[gd_scene load_steps=7 format=3 uid="uid://bdm23kuuc3m74"]

[ext_resource type="Texture2D" uid="uid://cx6nwy0ar1df6" path="res://assets/art/ui/UI button.png" id="1_6182c"]
[ext_resource type="Texture2D" uid="uid://dsn5ghw6d2av5" path="res://assets/art/ui/UI hover.png" id="2_3lon3"]
[ext_resource type="Texture2D" uid="uid://dpbustpf6nuvc" path="res://assets/art/ui/UI button pressed.png" id="3_7cmgq"]
[ext_resource type="Script" uid="uid://bmao6ilhutvvi" path="res://ui/components/menu_button.gd" id="4_iqu5b"]
[ext_resource type="Script" uid="uid://biajfv665ttlc" path="res://ui/components/hover_component.gd" id="5_3lon3"]

[sub_resource type="LabelSettings" id="LabelSettings_d4lpo"]
font_size = 50

[node name="MenuButton" type="TextureButton"]
texture_normal = ExtResource("1_6182c")
texture_pressed = ExtResource("2_3lon3")
texture_hover = ExtResource("3_7cmgq")
script = ExtResource("4_iqu5b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Text"
label_settings = SubResource("LabelSettings_d4lpo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoverComponent" type="Node" parent="."]
script = ExtResource("5_3lon3")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
